# algerian_forest_fire

./: .gitignore  README.md
client/src/: App.js  styles.css
server/: pyproject.toml
server/app/: main.py
server/app/routes/: model.py
