[tool.poetry]
name = "algerian-forest-fire"
version = "0.1.0"
description = ""
authors = ["Harshad Parmar <parmarharshad2510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
